--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -528,9 +528,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_travel_cities"
    ]
@@ -544,9 +567,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_travel_cities.append('San Antonio')\n",
     "top_travel_cities"
@@ -561,9 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'San Antonio'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_travel_cities.pop()"
    ]
